--- a/web-interface/index.html
+++ b/web-interface/index.html
@@ -11,8 +11,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../static/img/favicon.png" rel="icon">
-  <link href="../static/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -24,7 +24,7 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../static/css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="/" class="logo d-flex align-items-center">
-        <img src="../static/img/logo.png" alt="">
+        <img src="../assets/img/logo.png" alt="">
         <span>AWSS</span>
       </a>
 
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="../static/img/hero-img.png" class="img-fluid" alt="">
+          <img src="../assets/img/hero-img.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -91,7 +91,7 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="zoom-in" data-aos-delay="200">
             <div class="content">
               <h3>Upload the two files with DNAs</h3>
-              <form method="post" enctype="multipart/form-data" onsubmit="return control()" name="form-name" value="form1">
+              <form method="post" enctype="multipart/form-data" onsubmit="return control()" name="form-name" value="form1" action="https://jbh9tkjt87.execute-api.eu-central-1.amazonaws.com/dev">
                 <input type="file" name="file1ToUpload" id="file1ToUpload" class="form-control form-control-lg">
                 <br>
                 <input type="file" name="file2ToUpload" id="file2ToUpload" class="form-control form-control-lg">
@@ -140,7 +140,7 @@
         <div class="row">
 
           <div class="col-lg-6">
-            <img src="../static/img/features.png" class="img-fluid" alt="">
+            <img src="../assets/img/features.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 mt-5 mt-lg-0 d-flex">
@@ -261,7 +261,7 @@
           </div>
 
           <div class="col-lg-6">
-            <img src="../static/img/features-2.png" class="img-fluid" alt="">
+            <img src="../assets/img/features-2.png" class="img-fluid" alt="">
           </div>
 
         </div><!-- End Feature Tabs -->
@@ -505,7 +505,7 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-              <img src="../static/img/logo.png" alt="">
+              <img src="../assets/img/logo.png" alt="">
               <span>AWSS</span>
             </a>
             <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
@@ -528,11 +528,11 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-  <script src="../static/js/validate.js"></script>
-  <script src="../static/js/controls.js"></script>
+  <script src="../assets/js/validate.js"></script>
+  <script src="../assets/js/controls.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="../static/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 
 </body>
 </html>
