Complete with terraform frontend + some backend resources

--- a/web-interface/index.html
+++ b/web-interface/index.html
@@ -97,6 +97,8 @@
                 <br>
                 <input type="file" name="file2ToUpload" id="file2ToUpload" class="form-control form-control-lg">
                 <br>
+                <input type="text" name="email" id="email" placeholder="Email Address" class="form-control form-control-lg">
+                <br>
                 <input type="submit" value="Compute" name="compute" class="btn btn-primary btn-lg">
               </form>
             </div>
@@ -118,7 +120,7 @@
             <div class="content">
               <h3>Insert the ID of your result</h3>
               <form method="post" enctype="multipart/form-data" onsubmit="return controlID()" name="form-name" value="form2">
-                <input type="text" name="resultID" id="resultID" class="form-control form-control-lg">
+                <input type="text" name="resultID" id="resultID" placeholder="ID received by email" class="form-control form-control-lg">
                 <br>
                 <input type="submit" value="Get" name="get" class="btn btn-primary btn-lg">
               </form>
