--- a/web-interface/index.html
+++ b/web-interface/index.html
@@ -92,15 +92,13 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="zoom-in" data-aos-delay="200">
             <div class="content">
               <h3>Upload the two files with DNAs</h3>
-              <form method="post" enctype="multipart/form-data" onsubmit="return control()" name="form-name" value="form1">
-                <input type="file" name="file1ToUpload" id="file1ToUpload" class="form-control form-control-lg">
-                <br>
-                <input type="file" name="file2ToUpload" id="file2ToUpload" class="form-control form-control-lg">
-                <br>
-                <input type="text" name="email" id="email" placeholder="Email Address" class="form-control form-control-lg">
-                <br>
-                <input type="submit" value="Compute" name="compute" class="btn btn-primary btn-lg">
-              </form>
+              <input type="file" name="file1ToUpload" id="file1ToUpload" class="form-control form-control-lg">
+              <br>
+              <input type="file" name="file2ToUpload" id="file2ToUpload" class="form-control form-control-lg">
+              <br>
+              <input type="email" name="email" id="email" placeholder="Email Address" class="form-control form-control-lg">
+              <br>
+              <input type="submit" value="Compute" name="compute" id="compute" class="btn btn-primary btn-lg">
             </div>
           </div>
         </div>
@@ -119,11 +117,9 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-right" data-aos-delay="200">
             <div class="content">
               <h3>Insert the ID of your result</h3>
-              <form method="post" enctype="multipart/form-data" onsubmit="return controlID()" name="form-name" value="form2">
-                <input type="text" name="resultID" id="resultID" placeholder="ID received by email" class="form-control form-control-lg">
-                <br>
-                <input type="submit" value="Get" name="get" class="btn btn-primary btn-lg">
-              </form>
+              <input type="text" name="resultID" id="resultID" placeholder="ID received by email" class="form-control form-control-lg">
+              <br>
+              <input type="submit" value="Get" name="get" id="get" class="btn btn-primary btn-lg">
             </div>
           </div>
         </div>
@@ -494,10 +490,12 @@
   <!-- Vendor JS Files -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
   <script src="./assets/js/validate.js"></script>
-  <script src="./assets/js/controls.js"></script>
+  <script src="./assets/js/compute.js"></script>
+  <script src="./assets/js/result.js"></script>
 
   <!-- Template Main JS File -->
   <script src="./assets/js/main.js"></script>
