Refactor interface - features and contact menu button do not work

--- a/web-interface/index.html
+++ b/web-interface/index.html
@@ -28,7 +28,6 @@
 </head>
 
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -41,20 +40,19 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#features">Features</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="retrieve scrollto" href="#results">Retrieve a result</a></li>
           <li><a class="getstarted scrollto" href="#computing">Get Started</a></li>
+          <li><a class="nav-link scrollto" href="#results">Retrieve a result</a></li>
+          <li><a class="nav-link scrollto" href="#features">Features</a></li>
+          <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
+          <li><a class="nav-link scrollto" href="#contact-us">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
+      </nav><!-- navbar -->
     </div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero d-flex align-items-center">
-
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
@@ -74,13 +72,11 @@
         </div>
       </div>
     </div>
-
   </section><!-- End Hero -->
 
   <main id="main">
     <!-- ======= Computing Section ======= -->
     <section id="computing" class="computing">
-
       <div class="container" data-aos="zoom-in">
 
         <header class="section-header">
@@ -109,7 +105,7 @@
     <section id="results" class="results">
       <div class="container" data-aos="fade-right">
         <header class="section-header">
-          <h2>DNA substring matching - Retrieve result</h2>
+          <h2>DNA substring matching - Retrieve results</h2>
           <h1>Retrieve your files</h1>
         </header>
 
@@ -128,16 +124,13 @@
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
-
       <div class="container" data-aos="fade-left">
-
         <header class="section-header">
           <h2>Features</h2>
           <p>Laboriosam et omnis fuga quis dolor direda fara</p>
         </header>
 
         <div class="row">
-
           <div class="col-lg-6">
             <img src="./assets/img/features.png" class="img-fluid" alt="">
           </div>
@@ -186,125 +179,13 @@
                   <h3>Repellendus mollitia</h3>
                 </div>
               </div>
-
             </div>
           </div>
-
         </div> <!-- / row -->
-
-        <!-- Feature Tabs -->
-        <div class="row feture-tabs" data-aos="fade-up">
-          <div class="col-lg-6">
-            <h3>Neque officiis dolore maiores et exercitationem quae est seda lidera pat claero</h3>
-
-            <!-- Tabs -->
-            <ul class="nav nav-pills mb-3">
-              <li>
-                <a class="nav-link active" data-bs-toggle="pill" href="#tab1">Saepe fuga</a>
-              </li>
-              <li>
-                <a class="nav-link" data-bs-toggle="pill" href="#tab2">Voluptates</a>
-              </li>
-              <li>
-                <a class="nav-link" data-bs-toggle="pill" href="#tab3">Corrupti</a>
-              </li>
-            </ul><!-- End Tabs -->
-
-            <!-- Tab Content -->
-            <div class="tab-content">
-
-              <div class="tab-pane fade show active" id="tab1">
-                <p>Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita. Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
-                <div class="d-flex align-items-center mb-2">
-                  <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
-                </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non eveniet magni quaerat nemo et.</p>
-                <div class="d-flex align-items-center mb-2">
-                  <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
-                </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et perferendis.</p>
-              </div><!-- End Tab 1 Content -->
-
-              <div class="tab-pane fade show" id="tab2">
-                <p>Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita. Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
-                <div class="d-flex align-items-center mb-2">
-                  <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
-                </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non eveniet magni quaerat nemo et.</p>
-                <div class="d-flex align-items-center mb-2">
-                  <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
-                </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et perferendis.</p>
-              </div><!-- End Tab 2 Content -->
-
-              <div class="tab-pane fade show" id="tab3">
-                <p>Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita. Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
-                <div class="d-flex align-items-center mb-2">
-                  <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
-                </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non eveniet magni quaerat nemo et.</p>
-                <div class="d-flex align-items-center mb-2">
-                  <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
-                </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et perferendis.</p>
-              </div><!-- End Tab 3 Content -->
-
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-            <img src="./assets/img/features-2.png" class="img-fluid" alt="">
-          </div>
-
-        </div><!-- End Feature Tabs -->
-
-      </div>
-
-    </section><!-- End Features Section -->
-
-     <!-- ======= Counts Section ======= -->
-     <section id="counts" class="counts">
-      <div class="container" data-aos="zoom-in">
-
-        <div class="row gy-4 justify-content-center">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext" style="color: #ee6c20;"></i>
-              <div>
-                <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Substrings matched</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="count-box">
-              <i class="bi bi-people" style="color: #bb0852;"></i>
-              <div>
-                <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hard Workers</p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Counts Section -->
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
-
       <div class="container" data-aos="fade-right">
-
         <header class="section-header">
           <h2>F.A.Q</h2>
           <p>Frequently Asked Questions</p>
@@ -352,15 +233,12 @@
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
 
           <div class="col-lg-6">
-
             <!-- F.A.Q List 2-->
             <div class="accordion accordion-flush" id="faqlist2">
-
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-1">
@@ -399,36 +277,29 @@
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
-
         </div>
-
       </div>
 
     </section><!-- End F.A.Q Section -->
-
+    
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-
+    <section id="contact-us" class="contact">
       <div class="container" data-aos="fade-down">
-
         <header class="section-header">
-          <h2>Contact</h2>
+          <h2>Contacts</h2>
           <p>Contact Us</p>
         </header>
 
         <div class="row gy-4 justify-content-center">
-
           <div class="col-lg-6">
-
             <div class="row gy-4">
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
-                  <p>Via Adolfo Ferrata 5,<br>Pavia, PV 27100</p>
+                  <p>Via Adolfo Ferrata 5<br>Pavia, PV 27100</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -442,24 +313,21 @@
                 <div class="info-box">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@awss.com<br>contact@awss.com</p>
+                  <p>awss.unipv@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bi bi-clock"></i>
                   <h3>Open Hours</h3>
-                  <p>Monday - Friday<br>9:00AM - 05:00PM</p>
+                  <p>Monday - Friday<br>9:00 - 18:00</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
       </div>
-
     </section><!-- End Contact Section -->
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -499,6 +367,5 @@
 
   <!-- Template Main JS File -->
   <script src="./assets/js/main.js"></script>
-
 </body>
 </html>
