Fix web-interface bugs

--- a/web-interface/index.html
+++ b/web-interface/index.html
@@ -182,6 +182,8 @@
             </div>
           </div>
         </div> <!-- / row -->
+      </div>
+    </section>
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
@@ -281,7 +283,6 @@
           </div>
         </div>
       </div>
-
     </section><!-- End F.A.Q Section -->
     
     <!-- ======= Contact Section ======= -->
