--- a/web-interface/index.html
+++ b/web-interface/index.html
@@ -348,6 +348,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
   <script src="./assets/js/validate.js"></script>
   <script src="./assets/js/compute.js"></script>
   <script src="./assets/js/result.js"></script>
