--- a/web-interface/index.html
+++ b/web-interface/index.html
@@ -293,7 +293,7 @@
                 <div class="info-box">
                   <i class="bi bi-telephone d-flex justify-content-center"></i>
                   <h3 class="text-center">Call Us</h3>
-                  <p class="text-center">+39 0382 586958<br>+39 0382 857685</p>
+                  <p class="text-center">+39 0382 ------<br>+39 0382 ------</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -346,10 +346,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
-  <script src="./assets/js/validate.js"></script>
   <script src="./assets/js/compute.js"></script>
   <script src="./assets/js/result.js"></script>
 
