--- a/web-interface/error.html
+++ b/web-interface/error.html
@@ -11,8 +11,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="./assets/img/favicon.png" rel="icon">
-  <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/assets/img/favicon.png" rel="icon">
+  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -23,7 +23,7 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="./assets/css/style.css" rel="stylesheet">
+  <link href="/assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
           <h2>404 - Page Not Found</h2>
           <div>
             <div class="text-center text-lg-start">
-              <a href="index.html" class="btn-get-started scrollto d-inline-flex align-items-center">
+              <a href="/index.html" class="btn-get-started scrollto d-inline-flex align-items-center">
                 <span>Go To Homepage</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img">
-          <img src="./assets/img/hero-img.png" class="img-fluid" alt="">
+          <img src="/assets/img/hero-img.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
